hir/src/snapshots/hir__control_flow_graph_tests__kitchen_sink_branching.snap
---
source: src/lib.rs
expression: fn_hir.graph.graphviz_output()
---
digraph {
    0 [label="Entry"]
    1 [label="Exit"]
    2 [label="Block([LocalDefinition, LocalDefinition, BranchingCondition])"]
    3 [label="Block([LocalDefinition, Return])"]
    4 [label="Block([BranchingCondition])"]
    5 [label="Block([LocalDefinition, Return])"]
    6 [label="Block([BranchingCondition])"]
    7 [label="Block([BranchingCondition])"]
    8 [label="Block([Return])"]
    9 [label="Block([Return])"]
    10 [label="Block([LocalDefinition])"]
    11 [label="Block([LocalDefinition, LocalDefinition, BranchingCondition])"]
    12 [label="Block([LocalDefinition])"]
    13 [label="Block([Return])"]
    14 [label="Block([BranchingCondition])"]
    15 [label="Block([BranchingCondition])"]
    16 [label="Block([LocalDefinition])"]
    17 [label="Block([LocalDefinition])"]
    0 -> 2 [label="Normal"]
    3 -> 1 [label="Return"]
    2 -> 3 [label="ConditionTrue"]
    5 -> 1 [label="Return"]
    4 -> 5 [label="ConditionTrue"]
    8 -> 1 [label="Return"]
    7 -> 8 [label="ConditionTrue"]
    7 -> 9 [label="ConditionFalse"]
    9 -> 1 [label="Return"]
    6 -> 7 [label="ConditionTrue"]
    6 -> 10 [label="ConditionFalse"]
    4 -> 6 [label="ConditionFalse"]
    2 -> 4 [label="ConditionFalse"]
    10 -> 11 [label="Normal"]
    11 -> 12 [label="ConditionTrue"]
    13 -> 1 [label="Return"]
    11 -> 13 [label="ConditionFalse"]
    12 -> 14 [label="Normal"]
    15 -> 16 [label="ConditionTrue"]
    15 -> 17 [label="ConditionFalse"]
    14 -> 15 [label="ConditionTrue"]
    17 -> 1 [label="Normal"]
    16 -> 1 [label="Normal"]
    14 -> 1 [label="ConditionFalse"]
}

