hir/src/snapshots/hir__control_flow_graph_tests__many.snap
---
source: src/lib.rs
expression: fn_hir.graph.graphviz_output()
---
digraph {
    0 [label="Entry"]
    1 [label="Exit"]
    2 [label="Block([LocalDefinition, LocalDefinition, LocalDefinition, LocalDefinition, LocalDefinition, LocalDefinition, LocalDefinition])"]
    0 -> 2 [label="Normal"]
    2 -> 1 [label="Normal"]
}

